stop browser from prompting for a user input and added 3 buttons inside a div that houses the RPS choices

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Rock Paper Scissors</h1>
-        <script src="script.js"></script>
+        <div class="rps-choices">
+            <button class="rock">ROCK</button>
+            <button class="paper">PAPER</button>
+            <button class="scissors">SCISSORS</button>
+        </div>
+        <script src="script.js"></script>        
     </body>
 </html>
