change images to align text appropriately, added respective divs to contain score and eventually display result of each round

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     </head>
     <body>
         <h1>Rock Paper Scissors</h1>
-        <div class="rps-choices">
-            <button class="rock">ROCK</button>
-            <button class="paper">PAPER</button>
-            <button class="scissors">SCISSORS</button>
+        <div class="score">
+            <h2></h2>
         </div>
+        <div class="rps-choices">
+            <button type="button" class="rock"><img src="images/rock.png" width="260" height="500" alt="rock"></button>
+            <button type="button" class="paper"><img src="images/paper.png" width="260" height="500" alt="paper"></button>
+            <button type="button" class="scissors"><img src="images/scissors.png" width="260" height="500" alt="scissors"></button>
+        </div>
+        <h3 class="result"></h2>
         <script src="script.js"></script>        
     </body>
 </html>
