fix persisting image crop issue again

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <button type="button" class="paper"><img src="images/paper.png" width="260" height="500" alt="paper"></button>
             <button type="button" class="scissors"><img src="images/scissors.png" width="260" height="500" alt="scissors"></button>
         </div>
+        <div class="initiate">
+            <button>PLAY</button>
+        </div>
         <h3 class="result"></h2>
         <script src="script.js"></script>        
     </body>
