add css styling and refactor code for a UI implementation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button type="button" class="scissors"><img src="images/scissors.png" width="260" height="500" alt="scissors"></button>
         </div>
         <div class="initiate">
-            <button>PLAY</button>
+            <button type="button" class="start-button">PLAY</button>
         </div>
         <h3 class="result"></h2>
         <script src="script.js"></script>        
