--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
         <div class="score">
             <h2></h2>
         </div>
-        <div class="rps-choices">
+        <div id="rps-choices" class="rps-choices">
             <button type="button" class="rock"><img src="images/rock.png" width="260" height="500" alt="rock"></button>
             <button type="button" class="paper"><img src="images/paper.png" width="260" height="500" alt="paper"></button>
             <button type="button" class="scissors"><img src="images/scissors.png" width="260" height="500" alt="scissors"></button>
-        </div>
-        <div class="initiate">
-            <button type="button" class="start-button">PLAY</button>
         </div>
         <h3 class="result"></h2>
         <script src="script.js"></script>        
