real time display of computer and player choice, still need to map numbers to choices perhaps, and style it

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <button type="button" class="paper"><img src="images/paper.png" width="260" height="500" alt="paper"></button>
             <button type="button" class="scissors"><img src="images/scissors.png" width="260" height="500" alt="scissors"></button>
         </div>
-        <h3 id="result" class="result"></h3>
+        <div class="round-end-container">
+            <p id="round-end">Select an option to start.</p>
+        </div>
         <script src="script.js"></script>        
     </body>
 </html>
